# hypertrace

./: .clang-format  .gitignore  .gitmodules  .travis.yml  ABOUT.md  CMakeLists.txt  Cargo.toml  README.md  TIPS.md  TODO.md  build.sh  run.sh
core/: CMakeLists.txt  README.md
core/common.old/: types.h
core/common.old/algebra/: matrix.hpp  moebius.hpp  vector.cpp
core/common.old/container/: tuple.hpp  union.cpp
core/common.old/render/: light.hpp  renderer.hpp
core/common/algebra/: color.hh  complex.cc  complex.hh  real.hh  rotation.cc  vector_struct.hpp
core/common/geometry/: euclidean.hh  geometry.hpp  hyperbolic.hh  ray.hh
core/common/material/: material.cc  modifier.hpp
core/common/object/: object.hpp
core/common/render/: light.hh  view.cc
core/device/render/: hyperbolic.cl
core/examples/: CMakeLists.txt
core/host/: aligned.hpp  renderer.hpp
core/host/dyntype/: array.cpp  struct.cpp  struct.hpp  tuple.hpp  vector.hpp
core/host/opencl/: opencl.cpp
core/src/: math.hh  random.cc  random.hh
core/src/algebra/: complex.cc  linear.cc  matrix.hh  matrix_complex.cc  matrix_real.cc  matrix_test.cpp  moebius.hh  quaternion.cc  real.cc  real.hh  vector.cc  vector.hh  vector_math.hpp
core/src/geometry/: euclidean.cc  hyperbolic.cc
core/src/material/: material.hh  modifier.cpp
core/src/object/: object.hpp
core/src/render/: context.hh  view.hh
core/src/shape/: shape.hpp
core/test/: devtest.cpp  test_dev.cpp
host/: CMakeLists.txt
host/src/: main.cpp
host/src/opencl/: opencl.cpp  opencl.hpp  search.cpp  search.hpp
host/src/sdl/: base.hpp  image.hpp  viewer.cpp
kernel/: CMakeLists.txt  Cargo.toml  README.md  build.rs  gtest.rs  spirv.cmake
kernel/ocl/: hash.cc  hash.hh  macros.hh  macros_test.cpp  math.hh  placeholder.hpp  random.cc  random.hh  scene.inl  types.hh
kernel/ocl/algebra/: affine.cc  color.cc  complex.hh  matrix.hh  matrix_test.cpp  moebius.hh  quaternion.cc  quaternion.hh  real.cc  real.hh  rotation.cc  rotation.hh  vector.cc  vector.hh  vector_base.hpp  vector_math.hpp
kernel/ocl/background/: constant.hh  constant.inl  gradient.cc  gradient.hh  interface.hh  interface.inl
kernel/ocl/container/: array.inl  vector.inl
kernel/ocl/geometry/: eu.hh  euclidean.cc  euclidean.hh  geometry.hh  hy.hh  hyperbolic.cc  hyperbolic.hh  interface.inl  ray.hh  ray.inl  ray_eu.hh  ray_hy.hh  ray_map.inl  ray_test.cpp
kernel/ocl/material/: absorbing.cc  absorbing.hh  basic.cc  basic.hh  colored.inl  emissive.inl  interface.hh  interface.inl  lambertian.cc  lambertian.hh  material.cc  material.hh  modifier.inl  modifier_test.cpp  refractive.cc  refractive.hh  specular.cc  specular.hh  transparent.cc  transparent.hh
kernel/ocl/object/: covered.inl  covered_test.cpp  interface.hh  interface.inl  mapped.inl  vector.inl
kernel/ocl/render/: context.cc  context.hh  light.hh  render.cc  render.cl  scene.inl  view.hh  view.inl
kernel/ocl/shape/: interface.hh  interface.inl  mapped.inl  mapped_test.cpp  primitive.hh  vector.inl  vector_test.cpp
kernel/ocl/transform/: _affine.cc  affine.cc  affine.hh  chain.inl  chain_test.cpp  derive.inl  homogenous.hh  interface.hh  interface.inl  linear.cc  linear.hh  moebius.cc  moebius.hh  rotation.cc  rotation.hh  scale.cc  scale.hh  shift.cc  shift.hh
kernel/ocl/view/: interface.hh  interface.inl  mapped.inl  mapped_test.cpp  point.hh  point.inl  point_test.cpp
kernel/rust/: lib.rs
kernel/src/: defs.rs  lib.rs  macros.cc  macros.hh  main.cpp  random.cc  source.rs  tests.rs  types.hh
kernel/src/algebra/: affine.cc  affine.hh  complex.cc  linear.cc  linear.hh  matrix.hh  matrix_complex.cc  matrix_test.cpp  moebius.cc  quaternion.cc  real.cc  real.hh  rotation.cc  rotation.hh  traits.hpp  vector.cc  vector.hh
kernel/src/geometry/: euclidean.hh  hyperbolic.cc  hyperbolic.hh  ray.inl  ray_test.cpp
kernel/src/material/: material.cc  material.hh
kernel/src/object/: mapped.hh
kernel/src/render/: light.hh  view.hh
kernel/src/tests/: defs.rs  mod.rs
main/: Cargo.toml
main/examples/: eu.rs  hearth.rs  hy.rs
main/src/: cli.rs  lib.rs
objects/: Cargo.toml
objects/src/: lib.rs  macros_tests.rs  mapped.rs  scene.rs  shape.rs  shapes.rs  tests.rs  view.rs
objects/src/background/: basic.rs  mod.rs
objects/src/macros/: choice.rs  derive_tests.rs  material_mixture.rs  mod.rs  (+2 more)
processing/: Cargo.toml
processing/src/: buffer.rs  canvas.rs  context.rs  error.rs  filter.rs  lib.rs  pipeline.rs  render.rs
samples/: .gitignore  Cargo.toml
samples/src/: cli.rs  main.rs
src/: CMakeLists.txt  README.md  Toolchains.cmake  main.rs
src/common/: CMakeLists.txt  color.h  complex.c  complex.cpp  complex.h  hash.h  mat.hpp  material.cc  material.hh  math.cc  math.hh  math.hpp  memory.hpp  moebius.c  moebius.cpp  moebius.h  object.cc  object.h  object.hh  object.hpp  parameters.h  path.hh  path.hpp  prelude.cpp  prelude.hpp  quaternion.h  random.cc  random.cpp  random.h  random.hh  random.hpp  ray.h  ray.hh  real.h  test.hpp  traits.hpp  types.cc  types.h  types.hh  types.hpp  (+10 more)
src/common.old/: test.hpp
src/core/: CMakeLists.txt  box.hpp  compound.cpp  option.cpp  option.hpp  prelude.cpp  prelude.hpp  rc.hpp  result.cpp  result.hpp  traits.cpp  traits.hpp
src/device/: .gitignore  CMakeLists.txt  builtin.cl  builtin.h  config.cl  display.c  display.cl  kernel.cl  lens_blur.cl  math.cl  number.cl  render.cl  source.cl  trace.cpp  trace.h
src/examples/: CMakeLists.txt  euclidean.cpp  hyperbolic.cpp  main.cpp
src/examples.old/: CMakeLists.txt
src/host/: CMakeLists.txt  aligned.hpp  aligned_vector.hpp  cl.hpp  cl_include.hpp  color.hpp  flight.cpp  main.cpp  mat.cpp  mat.hpp  math.cpp  renderer.cpp  renderer.hpp  replay.cpp  scenario.cpp  scenario.hpp  storage.hpp  test.cpp  vec.hpp  vectype.hpp  viewer.hpp
src/test/: CMakeLists.txt  devtest.cpp  devtest.hpp  test_dev.cpp  test_unit.cpp
type-macros/: Cargo.toml
type-macros/examples/: dyn_sized.rs  enum_.rs  generic.rs  struct_.rs  template.rs  union_.rs  where_.rs
type-macros/src/: entity.rs  generic.rs  lib.rs  source.rs  utils.rs
(+547 files in other folders)
