[package]
name = "hy-objects"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[dependencies]
hy-base = { path = "../base" }
hy-types = { path = "../types" }
hy-type-macros = { path = "../type-macros" }
vecmat = { path = "../vecmat" }
ccgeom = { path = "../ccgeom" }
