[package]
name = "hy-processing"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[dependencies]
ocl = "0.19"
hy-base = { path = "../base" }
hy-types = { path = "../types" }
hy-kernel = { path = "../kernel" }
ocl-include = { path = "../includer" }
vecmat = { path = "../vecmat" }
ccgeom = { path = "../ccgeom" }
uni-path = "1"
regex = "1"
