[package]
name = "hypertrace-processing"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[dependencies]
ocl = "0.19"
base = { package = "hypertrace-base", path = "../base" }
types = { package = "hypertrace-types", path = "../types" }
objects = { package = "hypertrace-objects", path = "../objects" }
kernel = { package = "hypertrace-kernel", path = "../kernel", default-features = false }
ocl-include = { path = "../includer" }
vecmat = { path = "../vecmat" }
ccgeom = { path = "../ccgeom" }
rand = { version = "0.8", features = ["small_rng"] }
uni-path = "1"
regex = "1"
