[package]
name = "hypertrace-samples"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
sdl2 = "0.34"
ocl = "0.19"
types = { package = "hypertrace-types", path = "../types" }
view = { package = "hypertrace-viewer", path = "../viewer" }
objs = { package = "hypertrace-objects", path = "../objects" }
proc = { package = "hypertrace-processing", path = "../processing", features = ["backend_ocl"] }
clap = "2.33"
vecmat = { path = "../vecmat" }
ccgeom = { path = "../ccgeom" }
