[package]
name = "hypertrace-type-macros"
version = "0.0.0"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
synstructure = "0.12"

[dev-dependencies]
types = { package = "hypertrace-types", path = "../types" }
